<resources>
    <string name="app_name">To do list app 03</string>
    <string name="move_to_date">move_to_date</string>
    <string name="the_new_date">the new date</string>
    <string name="todo">TODO</string>
    <string name="date">date</string>
    <string name="description">description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_date_yyyy_mm_dd">Enter date (YYYY-MM-DD)</string>
</resources>