<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/input_edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edt_date"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/input_edt_urgency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="urgency"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edt_description"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/input_edt_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="done"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edt_urgency"
        tools:ignore="Autofill,HardcodedText,TextFields" />


    <EditText
        android:id="@+id/input_edt_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/the_new_date"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/input_edt_done"

        tools:ignore="Autofill,TextContrastCheck,TextFields"
        tools:layout_editor_absoluteX="61dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
